# github-config-files

./: .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml  sonar-project.properties
.github/: labeler.yml  sync.yml
.github/workflows/: __actionlint.yml  __build.yml  __build_and_deploy.yml  __build_and_publish.yml  __build_documentation.yml  __ci.yml  __ci_deployment.yml  __ci_validation.yml  __close_empty_pr.yml  __create_new_release.yml  __create_pr.yml  __create_pull_request.yml  __deploy.yml  __deploy_documentation.yml  __documentation.yml  __draft_release.yml  __get_release_tag.yml  __manage_pr_labels.yml  __manage_repo_labels.yml  __pr_autoupdate.yml  __pr_cleanup.yml  __publish_release.yml  __set_pr_auto_merge.yml  __sonarcloud.yml  __test.yml  __test_and_scan.yml  _actionlint.yml  _auto_create_pr.yml  _create_new_release.yml  _draft_release.yml  _manage_pr_labels.yml  _manage_repo_labels.yml  _pr_autoupdate.yml  _pr_cleanup.yml  _reject_stale_deployments.yaml  _run_sonarcloud_scan.yml  _set_pr_auto_merge.yml  _sonarcloud.yml  auto_create_pr.yml  auto_merge_pr.yaml  (+16 more)
gha_sync/: config.yml
gha_sync/configs/: release-drafter.yml
gha_sync/workflows/: actionlint.yml  ci.template.yml  ci.yml  create_new_release.template.yml  manage_pr_labels.yml  run_sonarcloud_scan.yml
gha_sync/workflows/addon-item-warehouse/: create_new_release.yml
gha_sync/workflows/addon_repos/: create_new_release.yml
gha_sync/workflows/addon_repos/addon-item-warehouse-website/: build.yml  create_new_release.yml  development_build.yml  production_build.yml  publish_release.yml
gha_sync/workflows/all/: auto_create_pr.yml  manage_pr.yml  pr_autoupdate.yml  set_pr_auto_merge.yml
gha_sync/workflows/all_repos/: actionlint.yml  auto_create_pr.yml  manage_pr.yml  manage_pr_labels.yml  manage_repo_labels.yml  pr_cleanup.yml  run_sonarcloud_scan.yml  set_pr_auto_merge.yml
gha_sync/workflows/pypi_repos/: create_new_release.yml  development_build.yml
gha_sync/workflows/repo/addon-item-warehouse-website/: ci.yml  create_new_release.template.yml  development_build.yml  eslint.yml  production_build.yml
gha_sync/workflows/repo/home-assistant/: validate_home_assistant_config.yml
gha_sync/workflows/repo/home-assistant-config-validator/: codspeed.yml  integration_test.yml
gha_sync/workflows/repo/wg-utilities/: build_and_publish.yml  ci.yml  draft_release.yml  production_build.yml
gha_sync/workflows/template/: ci.template.yml  ci_deployment.template.yml  ci_validation.template.yml  codspeed.template.yml
gha_sync/workflows/versioned_repos/: create_new_release.yml  publish_release.yml
utilities/dep_updater/: dep_updater.sh  install.sh
utilities/gha_sync/: get_file_mappings.py
utilities/readme/: common.py  generate_readme.py  map_workflows.py  mermaid_chart.py  repo_sync_table.py  update_readme.py
utilities/readme/utils/: __init__.py  common.py  mermaid_chart.py  repo_sync_table.py
utilities/reject_stale_deployments/: reject_deployments.py  reject_stale_deployments.py
